fixed wave clipping issue

--- a/src/components/Marketing/_marketing.scss
+++ b/src/components/Marketing/_marketing.scss
@@ -1,3 +1,4 @@
+
 body{
   background: #f6f9fa;
 }
@@ -15,7 +16,7 @@ body{
 }
 
 .wave{
-  background-image: url("../../assets/wave.svg");
+  background-image: url("../../assets/wave.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
